# refusal_geometry

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
asw/: __init__.py  config.py  db.py  repro.py  runlog.py
asw/attacks/: __init__.py  common.py  gcg.py  multiturn.py  pair.py  run.py
asw/baselines/: __init__.py  alphasteer.py  defenses.py
asw/data/: __init__.py  benchmarks.py  download.py
asw/eval/: __init__.py  metrics.py
asw/geometry/: __init__.py  extract.py  projection.py  trace.py  validate.py
asw/harness/: __init__.py  cli.py  evaluate.py  generate.py
asw/models/: __init__.py  hooks.py  loader.py
asw/report/: __init__.py  build.py  figures.py  load.py  tables.py
asw/scorers/: __init__.py  judge.py  refusal.py
asw/wrapper/: __init__.py  condition.py  steer.py  wrapper.py
configs/: base.yaml
configs/models/: dolphin-llama3-8b.yaml  dolphin-mistral-7b.yaml  llama3-70b-dolphin.yaml  llama3-8b-abliterated.yaml  llama3-8b-instruct.yaml  mistral-7b-instruct.yaml  qwen2.5-14b-instruct.yaml  (+3 more)
docs/: PRE_REGISTRATION_C5.md  README.md  RUNBOOK_dolphin.md
notebooks/: asw_experiments.ipynb  kaggle_bootstrap.ipynb
scripts/: diagnose_steering.py  download_benchmarks.py  validate_gcg.py
tests/: test_attacks.py  test_baselines.py  test_benchmarks.py  test_cli.py  test_condition.py  test_config.py  test_db.py  test_download.py  test_evaluate.py  test_gcg_gpu.py  test_generate.py  test_geometry.py  test_hooks.py  test_loader.py  test_metrics.py  test_refusal.py  test_report.py  test_trace.py  test_wrapper.py  test_zoo_configs.py
(+4 files in other folders)
