[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asw"
version = "0.1.0"
description = "Activation-Steering Safety Wrapper: refusal geometry zoo + adversarial audit"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["asw*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
